Fixed touch-pos issues that lead to rendering issues on mobile.

--- a/server/css/styles.css
+++ b/server/css/styles.css
@@ -1,16 +1,26 @@
 body {
         margin: 0; 
-        padding-top: 70px;    
+        padding-top: 70px;
+        //background: red;
 }
  
 #board {
         margin: 16px auto;
-        width: 320px;  
+        width: 320px;
+
+        // Prevent nearby text being accidentally selected
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
 }
  
 #drawboardCanvas {
         box-shadow: 0px 0px 12px 2px #999999;
-        margin: 4px 0 16px 0;      
+        margin: 4px 0 16px 0;
+        touch-action: none;
 }
 
 .infobox {
